--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Studio Mojo",
+  "name": "Medicare",
   "homepage": "https://studiomojo.lk",
   "private": true,
   "version": "0.0.0",
@@ -20,6 +20,7 @@
     "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.25",
     "gsap": "^3.12.5",
+    "leaflet": "^1.9.4",
     "loaders.css": "^0.1.2",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.22.3",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.12.6",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.10.7",
